finalized first version of socket.io plugin